# KagamiOS

./: .gitignore  config.yaml
kagamios/: pyproject.toml
kagamios/.claude-plugin/: plugin.json
kagamios/agents/: cartographer.md  historian.md  scout.md  skeptic.md  worker.md
kagamios/hooks/: guard.py  hooks.json
kagamios/kagami/: cli.py  config.py  events.py  hookguard.py  paths.py  registry.py  schema_version.py  timeutil.py
kagamios/kagami/corpus/: adapters.py  backoff.py  cache.py  extraction.py  provider.py
kagamios/kagami/kernel/: cartographer.py  charter_audit.py  deepen.py  derived_state.py  dispatch.py  dissolution.py  (+19 more)
kagamios/schemas/: common_metadata.yaml  consumption_map.yaml  dispatch.yaml  state_machine.yaml
kagamios/tests/: test_appraisal.py  test_artifact_store.py  test_backoff.py  test_cartographer.py  test_charter_audit.py  test_cli.py  test_config.py  test_corpus_adapters.py  test_corpus_cache.py  test_corpus_extraction.py  test_deepen.py  test_derived_state.py  test_dispatch.py  test_dissolution.py  test_dossier.py  test_entry.py  test_event_log_contract.py  test_events.py  test_first_framed_investigation.py  test_frame.py  test_gate_trust.py  test_historian.py  test_hook_guard_fails_closed.py  test_hookguard.py  test_kernel_frontier.py  test_kernel_metrics.py  test_kernel_profile.py  test_kernel_triage.py  test_ledger.py  test_locate.py  test_markdown_doc.py  test_monitor.py  test_paths.py  test_plugin_data_isolation.py  test_privacy.py  test_read.py  test_refusal.py  test_refusal_ceiling_cli.py  test_registry.py  test_repair.py  (+8 more)
(+101 files in other folders)
