[project]
name = "kagami"
version = "0.1.0"
description = "KagamiOS deterministic gatekeeper core"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0,<7.0",
]

[project.scripts]
kagami = "kagami.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kagami"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
